Commit de prueba para github

--- a/src/Presentation/Nop.Web/Themes/Healthy/Views/Home/Index.cshtml
+++ b/src/Presentation/Nop.Web/Themes/Healthy/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
 @*@added*@
 <div class="page home-page">
     <div class="page-body">
+        Mensaje de prueba para Github
         @Html.Widget("home_page_top")
         @Html.Action("TopicBlock", "Topic", new { systemName = "HomePageText" })
         @Html.Action("HomepageCategories", "Catalog")
